fixed overlap for like button

--- a/src/assets/scss/components/_description-bb.scss
+++ b/src/assets/scss/components/_description-bb.scss
@@ -2,7 +2,7 @@
   background: $blue-gray-transparent;
   bottom: 0;
   color: $medium-blue;
-  font-weight: $global-weight-semi-bold;
+  font-weight: $global-weight-semibold;
   padding-top: rem-calc(15);
   position: absolute;
   text-align: center;
