--- a/src/assets/scss/components/_header-bb.scss
+++ b/src/assets/scss/components/_header-bb.scss
@@ -48,6 +48,7 @@
 
   @include breakpoint(small only) {
     padding-right: rem-calc(50);
+    display: block;
   }
 }
 
